--- a/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
+++ b/builds/msvc/vs2013/libbitcoin/libbitcoin.vcxproj
@@ -90,6 +90,7 @@
     <ClCompile Include="..\..\..\..\src\math\ec_keys.cpp" />
     <ClCompile Include="..\..\..\..\src\math\external\hmac_sha256.c" />
     <ClCompile Include="..\..\..\..\src\math\external\hmac_sha512.c" />
+    <ClCompile Include="..\..\..\..\src\math\external\lax_der_parsing.c" />
     <ClCompile Include="..\..\..\..\src\math\external\pkcs5_pbkdf2.c" />
     <ClCompile Include="..\..\..\..\src\math\external\ripemd160.c" />
     <ClCompile Include="..\..\..\..\src\math\external\sha1.c" />
@@ -225,6 +226,7 @@
     <ClInclude Include="..\..\..\..\include\bitcoin\bitcoin\wallet\uri.hpp" />
     <ClInclude Include="..\..\..\..\src\math\external\hmac_sha256.h" />
     <ClInclude Include="..\..\..\..\src\math\external\hmac_sha512.h" />
+    <ClInclude Include="..\..\..\..\src\math\external\lax_der_parsing.h" />
     <ClInclude Include="..\..\..\..\src\math\external\pkcs5_pbkdf2.h" />
     <ClInclude Include="..\..\..\..\src\math\external\ripemd160.h" />
     <ClInclude Include="..\..\..\..\src\math\external\sha1.h" />
