--- a/Makefile.am
+++ b/Makefile.am
@@ -142,6 +142,7 @@ src_libbitcoin_la_SOURCES = \
     src/network/session_manual.cpp \
     src/network/session_outbound.cpp \
     src/network/session_seed.cpp \
+    src/network/settings.cpp \
     src/unicode/console_streambuf.cpp \
     src/unicode/ifstream.cpp \
     src/unicode/ofstream.cpp \
@@ -423,7 +424,6 @@ include_bitcoin_bitcoin_network_HEADERS = \
     include/bitcoin/bitcoin/network/hosts.hpp \
     include/bitcoin/bitcoin/network/logging.hpp \
     include/bitcoin/bitcoin/network/message_subscriber.hpp \
-    include/bitcoin/bitcoin/network/network_settings.hpp \
     include/bitcoin/bitcoin/network/p2p.hpp \
     include/bitcoin/bitcoin/network/pending_channels.hpp \
     include/bitcoin/bitcoin/network/pending_sockets.hpp \
@@ -441,6 +441,7 @@ include_bitcoin_bitcoin_network_HEADERS = \
     include/bitcoin/bitcoin/network/session_manual.hpp \
     include/bitcoin/bitcoin/network/session_outbound.hpp \
     include/bitcoin/bitcoin/network/session_seed.hpp \
+    include/bitcoin/bitcoin/network/settings.hpp \
     include/bitcoin/bitcoin/network/shared_const_buffer.hpp
 
 include_bitcoin_bitcoin_unicodedir = ${includedir}/bitcoin/bitcoin/unicode
