Move stealth_row and history_row into bc::chain to fac. bc::database.

--- a/Makefile.am
+++ b/Makefile.am
@@ -299,12 +299,14 @@ include_bitcoin_bitcoin_chaindir = ${includedir}/bitcoin/bitcoin/chain
 include_bitcoin_bitcoin_chain_HEADERS = \
     include/bitcoin/bitcoin/chain/block.hpp \
     include/bitcoin/bitcoin/chain/header.hpp \
+    include/bitcoin/bitcoin/chain/history_row.hpp \
     include/bitcoin/bitcoin/chain/input.hpp \
     include/bitcoin/bitcoin/chain/opcode.hpp \
     include/bitcoin/bitcoin/chain/operation.hpp \
     include/bitcoin/bitcoin/chain/output.hpp \
     include/bitcoin/bitcoin/chain/point.hpp \
     include/bitcoin/bitcoin/chain/script.hpp \
+    include/bitcoin/bitcoin/chain/stealth_row.hpp \
     include/bitcoin/bitcoin/chain/transaction.hpp
 
 include_bitcoin_bitcoin_configdir = ${includedir}/bitcoin/bitcoin/config
