Change spend_result to bc::chain::spend and eliminate deferred memory read.

--- a/Makefile.am
+++ b/Makefile.am
@@ -309,6 +309,7 @@ include_bitcoin_bitcoin_chain_HEADERS = \
     include/bitcoin/bitcoin/chain/output.hpp \
     include/bitcoin/bitcoin/chain/point.hpp \
     include/bitcoin/bitcoin/chain/script.hpp \
+    include/bitcoin/bitcoin/chain/spend.hpp \
     include/bitcoin/bitcoin/chain/stealth_row.hpp \
     include/bitcoin/bitcoin/chain/transaction.hpp
 
