--- a/builds/msvc/vs2013/libbitcoin/packages.config
+++ b/builds/msvc/vs2013/libbitcoin/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="boost" version="1.56.0.0" targetFramework="Native" />
+  <package id="boost_chrono-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_date_time-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_filesystem-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_iostreams-vc120" version="1.56.0.0" targetFramework="Native" />
@@ -8,5 +9,6 @@
   <package id="boost_program_options-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_regex-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="boost_system-vc120" version="1.56.0.0" targetFramework="Native" />
+  <package id="boost_thread-vc120" version="1.56.0.0" targetFramework="Native" />
   <package id="secp256k1_vc120" version="0.1.0.13" targetFramework="Native" />
 </packages>
