--- a/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj.filters
+++ b/builds/msvc/vs2013/libbitcoin-test/libbitcoin-test.vcxproj.filters
@@ -264,5 +264,8 @@
     <ClCompile Include="..\..\..\..\test\math\elliptic_curve.cpp">
       <Filter>src\math</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\..\test\utility\collection.cpp">
+      <Filter>src\utility</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
