--- a/.travis.yml
+++ b/.travis.yml
@@ -61,9 +61,6 @@ install:
     # Download and install packages for osx/clang/dynamic.
     - if [[ $OSX   && $CLANG && $DYNAMIC ]]; then brew unlink boost; brew install boost; fi
 
-    # Download and install packages for linux/gcc/dynamic.
-    - if [[ $LINUX && $GCC   && $DYNAMIC ]]; then sudo apt-get -qq install boost1.56; fi
-
 script:
 
     # Download and build libbitcoin and all dependencies.
@@ -74,7 +71,7 @@ script:
     - if [[ $LINUX && $CLANG && $DYNAMIC ]]; then sudo CXX=$CXX CC=$CC ./install.sh --with-icu --build-icu --build-boost --disable-ndebug --disable-static CFLAGS='-Os' CXXFLAGS='-Os'; fi
 
     - if [[ $LINUX && $GCC   && $STATIC  ]]; then ./install.sh --with-icu --with-png --with-qrencode --build-icu --build-png --build-qrencode --build-boost --disable-shared --prefix=$TRAVIS_BUILD_DIR/my-prefix --build-dir=my-build; fi
-    - if [[ $LINUX && $GCC   && $DYNAMIC ]]; then sudo CXX=$CXX CC=$CC ./install.sh CFLAGS='-O0 -g --coverage' CXXFLAGS='-O0 -g --coverage'; fi
+    - if [[ $LINUX && $GCC   && $DYNAMIC ]]; then sudo CXX=$CXX CC=$CC ./install.sh --build-boost CFLAGS='-O0 -g --coverage' CXXFLAGS='-O0 -g --coverage'; fi
 
 after_success:
 
